moved tools for computing FOV

--- a/CameraSelection.ipynb
+++ b/CameraSelection.ipynb
@@ -21,60 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dfov(width_px, height_px, pitch_um, f_mm):\n",
-    "    half_diag_px = 0.5 * np.sqrt(width_px ** 2 + height_px ** 2)\n",
-    "    half_diag_mm = half_diag_px * pitch_um * 1e-3\n",
-    "    theta = 2 * np.arctan(half_diag_mm / f_mm)\n",
-    "\n",
-    "    return theta\n",
-    "\n",
-    "\n",
-    "def hfov(width_px, height_px, pitch_um, f_mm):\n",
-    "    return dfov(width_px, 0, pitch_um, f_mm)\n",
-    "\n",
-    "\n",
-    "def vfov(width_px, height_px, pitch_um, f_mm):\n",
-    "    return dfov(0, height_px, pitch_um, f_mm)\n",
-    "\n",
-    "\n",
-    "def gsd(pitch_um, f_mm, distance):\n",
-    "    return distance * np.tan(hfov(1, 1, pitch_um, f_mm))\n",
-    "\n",
-    "\n",
-    "def print_summary(identifier, width_px, height_px, pitch_um, f_mm, distance_m):\n",
-    "    theta_d = dfov(width_px, height_px, pitch_um, f_mm)\n",
-    "    theta_h = hfov(width_px, height_px, pitch_um, f_mm) * 180.0 / np.pi\n",
-    "    theta_v = vfov(width_px, height_px, pitch_um, f_mm) * 180.0 / np.pi\n",
-    "    gsd_mm = gsd(pitch_um, f_mm, distance_m * 1e3)\n",
-    "    print(\n",
-    "        f\"{identifier}\\n\"\n",
-    "        f\" focal length   = {f_mm:.2f} mm\\n\"\n",
-    "        f\" FOV   Diagonal = {theta_d * 180. / np.pi:.1f} degrees\\n\"\n",
-    "        f\"     Horizontal = {theta_h:.1f} degrees\\n\"\n",
-    "        f\"       Vertical = {theta_v:.1f} degrees\\n\"\n",
-    "        f\"  GSD at {distance_m:.2f} m = {gsd_mm:.1f} mmm\\n\"\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def compute_pitch_um(dfov_rad, width_px, height_px, f_mm):\n",
-    "    half_diag_px = 0.5 * np.sqrt(width_px ** 2 + height_px ** 2)\n",
-    "    pitch_um = np.tan(dfov_rad) * f_mm / half_diag_px * 1e3\n",
-    "    return pitch_um\n",
-    "\n",
-    "\n",
-    "def compute_focal_mm(dfov_rad, width_px, height_px, pitch_um):\n",
-    "    half_diag_mm = 0.5 * np.sqrt(width_px ** 2 + height_px ** 2) * pitch_um * 1e-3\n",
-    "    f_mm = half_diag_mm / np.tan(dfov_rad * 0.5)\n",
-    "    return f_mm\n"
+    "import numpy as np\n",
+    "import fov_tools"
    ]
   },
   {
@@ -87,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +85,7 @@
     "height_pixels = 1242\n",
     "pitch_um = 2.8\n",
     "\n",
-    "print_summary(\"Zed 2i, 2mm lens option\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "fov_tools.summary(\"Zed 2i, 2mm lens option\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
    ]
   },
   {
@@ -149,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +120,7 @@
     "height_pixels = 1242\n",
     "pitch_um = 2.8\n",
     "\n",
-    "print_summary(\"Zed 2i, 4mm lens option\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "fov_tools.summary(\"Zed 2i, 4mm lens option\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
    ]
   },
   {
@@ -184,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +156,7 @@
     "height_pixels = 1200\n",
     "pitch_um = 3.45\n",
     "\n",
-    "print_summary(\"Lucid TRI230c\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "fov_tools.summary(\"Lucid TRI230c\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
    ]
   },
   {
@@ -229,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +199,8 @@
     "height_pixels = 3040\n",
     "pitch_um = 1.55\n",
     "dfov_deg = 81.0\n",
-    "focal_mm = compute_focal_mm(dfov_deg * np.pi / 180, width_pixels, height_pixels, pitch_um)\n",
-    "print_summary(\"Luxonis Oak-D POE\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "focal_mm = fov_tools.compute_focal_mm(dfov_deg * np.pi / 180, width_pixels, height_pixels, pitch_um)\n",
+    "fov_tools.summary(\"Luxonis Oak-D POE\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
    ]
   },
   {
