gsd plotting added

--- a/CameraSelection.ipynb
+++ b/CameraSelection.ipynb
@@ -17,12 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import fov_tools"
+    "import fov_tools\n",
+    "import gsd_tools"
    ]
   },
   {
@@ -35,17 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Camera center projects to a point on the ground 4.00 m away.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "camera_height_m = 2.0\n",
     "camera_declination_degrees = 30\n",
@@ -62,30 +55,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Zed 2i, 2mm lens option\n",
-      " focal length   = 2.20 mm\n",
-      " FOV   Diagonal = 116.4 degrees\n",
-      "     Horizontal = 109.1 degrees\n",
-      "       Vertical = 76.6 degrees\n",
-      "  GSD at 4.00 m = 5.1 mmm\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "focal_mm = 2.2\n",
     "width_pixels = 2208\n",
     "height_pixels = 1242\n",
     "pitch_um = 2.8\n",
     "\n",
-    "fov_tools.summary(\"Zed 2i, 2mm lens option\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "fov_tools.summary(\n",
+    "    \"Zed 2i, 2mm lens option\",\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    distance_m,\n",
+    ")\n",
+    "gsd_tools.summary(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")\n",
+    "gsd_tools.plot(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")\n"
    ]
   },
   {
@@ -97,30 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Zed 2i, 4mm lens option\n",
-      " focal length   = 4.00 mm\n",
-      " FOV   Diagonal = 83.1 degrees\n",
-      "     Horizontal = 75.4 degrees\n",
-      "       Vertical = 47.0 degrees\n",
-      "  GSD at 4.00 m = 2.8 mmm\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "focal_mm = 4.0\n",
     "width_pixels = 2208\n",
     "height_pixels = 1242\n",
     "pitch_um = 2.8\n",
     "\n",
-    "fov_tools.summary(\"Zed 2i, 4mm lens option\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "fov_tools.summary(\"Zed 2i, 4mm lens option\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)\n",
+    "gsd_tools.summary(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")\n",
+    "gsd_tools.plot(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")"
    ]
   },
   {
@@ -132,23 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lucid TRI230c\n",
-      " focal length   = 12.00 mm\n",
-      " FOV   Diagonal = 36.1 degrees\n",
-      "     Horizontal = 30.9 degrees\n",
-      "       Vertical = 19.6 degrees\n",
-      "  GSD at 4.00 m = 1.2 mmm\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "focal_mm = 12.0\n",
@@ -156,7 +146,23 @@
     "height_pixels = 1200\n",
     "pitch_um = 3.45\n",
     "\n",
-    "fov_tools.summary(\"Lucid TRI230c\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "fov_tools.summary(\"Lucid TRI230c\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)\n",
+    "gsd_tools.summary(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")\n",
+    "gsd_tools.plot(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")"
    ]
   },
   {
@@ -177,30 +183,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Luxonis Oak-D POE\n",
-      " focal length   = 4.60 mm\n",
-      " FOV   Diagonal = 81.0 degrees\n",
-      "     Horizontal = 68.7 degrees\n",
-      "       Vertical = 54.2 degrees\n",
-      "  GSD at 4.00 m = 1.3 mmm\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "width_pixels = 4056\n",
     "height_pixels = 3040\n",
     "pitch_um = 1.55\n",
     "dfov_deg = 81.0\n",
-    "focal_mm = fov_tools.compute_focal_mm(dfov_deg * np.pi / 180, width_pixels, height_pixels, pitch_um)\n",
-    "fov_tools.summary(\"Luxonis Oak-D POE\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m)"
+    "focal_mm = fov_tools.compute_focal_mm(\n",
+    "    dfov_deg * np.pi / 180, width_pixels, height_pixels, pitch_um\n",
+    ")\n",
+    "fov_tools.summary(\n",
+    "    \"Luxonis Oak-D POE\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m\n",
+    ")\n",
+    "gsd_tools.summary(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")\n",
+    "gsd_tools.plot(\n",
+    "    width_pixels,\n",
+    "    height_pixels,\n",
+    "    pitch_um,\n",
+    "    focal_mm,\n",
+    "    camera_declination_degrees,\n",
+    "    camera_height_m,\n",
+    ")\n"
    ]
   },
   {
