plot levels as parameter

--- a/CameraSelection.ipynb
+++ b/CameraSelection.ipynb
@@ -8,11 +8,25 @@
     "\n",
     "Author: Paul Barsic  \n",
     "paul.barsic@terraclear.com  \n",
-    "13 December 2021\n",
+    "8 June 2022\n",
     "\n",
     "### Summary\n",
     "\n",
-    "This notebook contains some good methods for comparing sensor resolution. The purpose of this comparison is to inform Terraclear's camera choices for the Autonomy POC work that needs to be done in January 2022. I think that the best camera available is the Luxonis Oak-D POE camera, which combines a stereo sensor with a high resolution RGB sensor with a sufficiently small GSD, in an IP-67 package."
+    "This notebook contains some good methods for comparing different cameras.  \n",
+    "The purpose of this comparison is to inform TerraClear's camera choices for the tow-behind work.  \n",
+    "This notebook examines the geometric properties only.  \n",
+    "\n",
+    "I think that the best camera available is the Luxonis Oak-D POE camera, which combines a stereo sensor with a high resolution RGB sensor with a sufficiently small GSD, in an IP-67 package.\n",
+    "\n",
+    "The GSD plots are shown in sensor coordinates, not as a ground patch. This will confuse some people, so don't share this notebook until I also plot the ground patch.\n",
+    "\n",
+    "In the GSD plots, white areas are out of range. The function is monatonic until the horizon, which matters if the camera has a large FOV and a shallow declination.\n",
+    "\n",
+    "### TODO\n",
+    "* wrap this stuff in a class\n",
+    "* plot the ground patch\n",
+    "* indicate the horizon\n",
+    "* plot the GSD on the ground patch"
    ]
   },
   {
@@ -30,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Camera orientation\n",
+    "## Camera orientation\n",
     "The next box defines the model camera mounting parameters: height above ground, and angle that the camera is tilted down from the horizon."
    ]
   },
