added license, readme

--- a/OAK_D_comparisions.ipynb
+++ b/OAK_D_comparisions.ipynb
@@ -32,13 +32,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,11 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera_height_m = 2.13\n",
-    "camera_declination_degrees = 60\n",
+    "camera_height_m = 1.7\n",
+    "camera_declination_degrees = 80\n",
     "distance_m = camera_height_m / np.sin(camera_declination_degrees * np.pi / 180.)\n",
-    "\n",
-    "print(f\"Camera center projects to a point on the ground {distance_m:0.2f} m away.\")\n",
     "\n",
     "width_pixels = 4056\n",
     "height_pixels = 3040\n",
@@ -76,6 +67,9 @@
     "fov_tools.summary(\n",
     "    \"Luxonis Oak-D POE\", width_pixels, height_pixels, pitch_um, focal_mm, distance_m\n",
     ")\n",
+    "\n",
+    "print(f\"Camera center projects to a point on the ground {distance_m:0.2f} m away.\\n\")\n",
+    "\n",
     "gsd_tools.summary(\n",
     "    width_pixels,\n",
     "    height_pixels,\n",
@@ -91,7 +85,6 @@
     "    focal_mm,\n",
     "    camera_declination_degrees,\n",
     "    camera_height_m,\n",
-    "    levels=np.arange(.7,1.6,.1).tolist()\n",
     ")"
    ]
   },
@@ -110,9 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera_height_m = 1.7\n",
-    "camera_declination_degrees = 90\n",
-    "distance_m = camera_height_m / np.sin(camera_declination_degrees * np.pi / 180.)\n",
+    "camera_height_m = 1.0\n",
+    "camera_declination_degrees = 85\n",
+    "distance_m = camera_height_m / np.sin(camera_declination_degrees * np.pi / 180.0)\n",
     "\n",
     "print(f\"Camera center projects to a point on the ground {distance_m:0.2f} m away.\")\n",
     "\n",
@@ -141,8 +134,7 @@
     "    focal_mm,\n",
     "    camera_declination_degrees,\n",
     "    camera_height_m,\n",
-    "    levels=[1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 2.0]\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -174,7 +166,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3d0bc8314228987b61522f6f31dbad63411dcf502b4e39ab20cd68199e74d86b"
+    "hash": "82913274f257112ff14e6af8b18c739c4242e78402a7fd79458f882dc75a0fff"
    }
   }
  },
